# accounting-lab

./: .gitignore  README.md  devbox.json  hatch.toml  pyproject.toml  requirements.txt  ruff_defaults.toml  tailwind.config.js
app/: extensions.py  factory.py  utils.py
app/controllers/: accounts.py  ledger.py  statement.py
app/models/: base.py  ledger.py  types.py
app/services/: ledger.py  statement.py
app/static/css/: index.css
app/templates/: index.html
app/templates/accounts/: index.html  taccounts.html
app/templates/accounts/partials/: account-list.html  taccount.html
app/templates/financial_statement/: folders.html  index.html
app/templates/financial_statement/partials/: entries.html  folder.html
app/templates/layouts/: base.html
app/templates/layouts/partials/: navlink.html
app/templates/ledger/: index.html
app/templates/ledger/partials/: entry-items.html  ledger-entries.html
migrations/versions/: 34b9b565e5d9_.py  4b4ea9759605_.py  6275213f9cd3_.py  8e4979afaec7_.py  dc14fb435411_.py
