[tool.poetry]
name = "accounting-lab"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^3.0.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"


[tool.poe.tasks]
fmt-check = [
    { cmd = "ruff check --no-fix ." },
    { cmd = "ruff format --check ." }
]
fmt = [
    { cmd = "ruff check --fix ." },
    { cmd = "ruff format ." }
]

[tool.poe.tasks.dev]
cmd = "flask run"
env = { FLASK_APP = "app.factory", FLASK_DEBUG = "1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
