[tool.poetry]
name = "accounting-lab"
version = "0.1.0"
description = ""
authors = ["Lucino772 <lucapalmi772@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
flask = "^3.0.2"
jinja-partials = "^0.2.0"
flask-htmx = "^0.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
pytailwindcss = "^0.2.0"


[tool.poe.tasks]
fmt-check = [
    { cmd = "ruff check --no-fix ." },
    { cmd = "ruff format --check ." }
]
fmt = [
    { cmd = "ruff check --fix ." },
    { cmd = "ruff format ." }
]
css-watch = "tailwindcss --output ./app/static/css/index.css --watch --minify"
css-build = "tailwindcss --output ./app/static/css/index.css --minify"

[tool.poe.tasks.dev]
cmd = "flask run"
env = { FLASK_APP = "app.factory", FLASK_DEBUG = "1" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
