[project]
name = "accounting-lab"
version = "0.1.0"
description = "accounting lab"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask==3.0.3",
  "jinja-partials==0.1.1",
  "flask-htmx==0.3.2",
  "flask-sqlalchemy==3.1.1",
  "flask-migrate==4.0.7",
  "pytailwindcss==0.2.0",
  "flask-wtf==1.2.1",
  "djlint==1.34.1"
]

[dependency-groups]
dev = [
  "ruff>=0.8.6",
]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
extend-exclude = [ "migrations/**.py" ]

[tool.ruff.lint.isort]
known-first-party = ["app"]
